--- a/css/main.css
+++ b/css/main.css
@@ -30,10 +30,28 @@ body {
 }
 
 .container {
-  width: 1200px;
+  width: 100%;
   padding-left: 15px;
   padding-right: 15px;
   margin: 0 auto;
+}
+
+@media screen and (min-width: 480px) {
+  .container {
+    width: 480px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+  }
 }
 
 .section {
@@ -90,84 +108,143 @@ body {
 
 .header__container {
   display: flex;
-  align-items: center;
   justify-content: space-between;
-}
-
-.header__site-nav {
-  display: flex;
   align-items: center;
 }
 
 .header-nav {
-  display: flex;
-  align-items: center;
-}
-
-.header-nav__item {
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  font-weight: 700;
-}
-
-.header-nav__item:not(:last-child) {
-  margin-right: 50px;
-}
-
-.header-nav__link {
-  position: relative;
-  color: #212121;
-  padding-top: 32px;
-  padding-bottom: 32px;
-}
-
-.nav-link--active {
-  color: #2196F3;
-}
-
-.nav-link--current::after {
-  content: "";
-  width: 100%;
-  height: 4px;
-  border-radius: 2px;
-  background-color: #2196F3;
-  position: absolute;
-  bottom: -1px;
-  left: 0;
+  display: none;
 }
 
 .header-contacts {
+  display: none;
+}
+
+.header-menu-btn {
+  width: 40px;
+  height: 40px;
+  padding: 12px 8px;
   display: flex;
   align-items: center;
-}
-
-.header-contacts__item {
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  font-weight: 500;
-}
-
-.header-contacts__item:not(:last-child) {
-  margin-right: 50px;
-}
-
-.header-contacts__link {
-  padding-top: 32px;
-  padding-bottom: 32px;
-  color: #757575;
-  display: flex;
-  align-items: center;
+  justify-content: center;
+  border: none;
+  background: transparent;
+  color: #000000;
+  cursor: pointer;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.header-contacts__link:hover, .header-contacts__link:focus {
+.header-menu-btn:focus, .header-menu-btn:hover {
+  color: #2196f3;
+}
+
+.header-menu-btn__icon {
+  fill: currentColor;
+}
+
+.mob-menu {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  z-index: 5;
+  background: #ffffff;
+  padding: 48px 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  transition: visibility 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.close-menu-btn {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  width: 40px;
+  height: 40px;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: none;
+  background: transparent;
+  color: #000000;
+  cursor: pointer;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.close-menu-btn:focus, .close-menu-btn:hover {
+  color: #2196f3;
+}
+
+.close-menu-btn__icon {
+  fill: currentColor;
+}
+
+.mob-menu-list__item:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.mob-menu-list__link {
+  font-style: normal;
+  font-size: 40px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  font-weight: 500;
+  color: #212121;
+}
+
+.mob-menu-active {
   color: #2196F3;
 }
 
-.header-contacts__icons {
-  fill: currentColor;
+.mob-menu-tel {
+  display: block;
+  font-style: normal;
+  font-size: 34px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  font-weight: 500;
+  color: #2196F3;
+}
+
+.mob-menu-tel--indent {
+  margin-bottom: 32px;
+}
+
+.mob-menu-mail {
+  display: block;
+  font-style: normal;
+  font-size: 24px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  font-weight: 500;
+  color: #757575;
+}
+
+.mob-menu-mail--indent {
+  margin-bottom: 64px;
+}
+
+.mob-social-list {
+  display: flex;
+}
+
+.mob-social-list__link {
+  font-style: normal;
+  font-size: 18px;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+  font-weight: 500;
+  color: #2196F3;
+}
+
+.social-dash::after {
+  content: "";
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  transform: rotate(90deg);
+  background-color: rgba(33, 33, 33, 0.2);
+  margin-left: 10px;
   margin-right: 10px;
 }
 
