--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -1,12 +1,23 @@
 body {
 	font-family: "Roboto", sans-serif;
 	color: #212121;
+	
 }
 .container {
-	width: 1200px;
+	width: 100%;
 	padding-left: 15px;
 	padding-right: 15px;
 	margin: 0 auto;
+
+	@media screen and (min-width: 480px) {
+		width: 480px;
+	}
+	@media screen and (min-width: 768px) {
+		width: 768px;
+	}
+	@media screen and (min-width: 1200px) {
+		width: 1200px;
+	}
 }
 
 
