--- a/css/main.css
+++ b/css/main.css
@@ -38,7 +38,7 @@ body {
 
 @media screen and (min-width: 480px) {
   .container {
-    width: 480px;
+    min-width: 320px;
   }
 }
 
@@ -55,8 +55,15 @@ body {
 }
 
 .section {
-  padding-bottom: 94px;
-  padding-top: 94px;
+  padding-bottom: 60px;
+  padding-top: 60px;
+}
+
+@media screen and (min-width: 1200px) {
+  .section {
+    padding-bottom: 94px;
+    padding-top: 94px;
+  }
 }
 
 .logo {
@@ -78,9 +85,24 @@ body {
 }
 
 .header__logo {
-  margin-right: 93px;
-  padding-top: 24px;
+  padding-top: 16px;
   padding-bottom: 24px;
+}
+
+@media screen and (min-width: 768px) {
+  .header__logo {
+    margin-right: 88px;
+    padding-top: 26px;
+    padding-bottom: 26px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .header__logo {
+    margin-right: 93px;
+    padding-top: 24px;
+    padding-bottom: 24px;
+  }
 }
 
 .footer__logo {
@@ -112,14 +134,6 @@ body {
   align-items: center;
 }
 
-.header-nav {
-  display: none;
-}
-
-.header-contacts {
-  display: none;
-}
-
 .header-menu-btn {
   width: 40px;
   height: 40px;
@@ -136,6 +150,12 @@ body {
 
 .header-menu-btn:focus, .header-menu-btn:hover {
   color: #2196f3;
+}
+
+@media screen and (min-width: 768px) {
+  .header-menu-btn {
+    display: none;
+  }
 }
 
 .header-menu-btn__icon {
@@ -245,6 +265,120 @@ body {
   transform: rotate(90deg);
   background-color: rgba(33, 33, 33, 0.2);
   margin-left: 10px;
+  margin-right: 10px;
+}
+
+@media screen and (min-width: 768px) {
+  .header__site-nav {
+    display: flex;
+    align-items: center;
+  }
+}
+
+.header-nav {
+  display: none;
+}
+
+@media screen and (min-width: 768px) {
+  .header-nav {
+    display: flex;
+    align-items: center;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .header-nav__item {
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    font-weight: 700;
+  }
+  .header-nav__item:not(:last-child) {
+    margin-right: 50px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .header-nav__link {
+    position: relative;
+    color: #212121;
+    padding-top: 32px;
+    padding-bottom: 32px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .nav-link--active {
+    color: #2196F3;
+  }
+  .nav-link--current::after {
+    content: "";
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    background-color: #2196F3;
+    position: absolute;
+    bottom: -2px;
+    left: 0;
+  }
+}
+
+.header-contacts {
+  display: none;
+}
+
+@media screen and (min-width: 768px) {
+  .header-contacts {
+    display: block;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .header-contacts {
+    display: flex;
+    justify-content: space-between;
+  }
+}
+
+.header-contacts__item {
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  font-weight: 500;
+}
+
+@media screen and (min-width: 768px) {
+  .header-contacts__item:not(:last-child) {
+    margin-bottom: 10px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .header-contacts__item:not(:last-child) {
+    margin-right: 50px;
+  }
+}
+
+.header-contacts__link {
+  color: #757575;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.header-contacts__link:hover, .header-contacts__link:focus {
+  color: #2196F3;
+}
+
+@media screen and (min-width: 1200px) {
+  .header-contacts__link {
+    padding-top: 32px;
+    padding-bottom: 32px;
+    display: flex;
+    align-items: center;
+  }
+}
+
+.header-contacts__icons {
+  fill: currentColor;
   margin-right: 10px;
 }
 
