--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -1,7 +1,6 @@
 body {
 	font-family: "Roboto", sans-serif;
 	color: #212121;
-	
 }
 .container {
 	width: 100%;
@@ -10,7 +9,7 @@ body {
 	margin: 0 auto;
 
 	@media screen and (min-width: 480px) {
-		width: 480px;
+		min-width: 320px;
 	}
 	@media screen and (min-width: 768px) {
 		width: 768px;
@@ -20,8 +19,11 @@ body {
 	}
 }
 
-
 .section {
-	padding-bottom: 94px;
-	padding-top: 94px;
+	padding-bottom: 60px;
+	padding-top: 60px;
+	@media screen and (min-width: 1200px) {
+		padding-bottom: 94px;
+		padding-top: 94px;
+	}
 }
