--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -7,12 +7,6 @@
 	justify-content: space-between;
 	align-items: center;
 }
-.header-nav {
-	display: none;
-}
-.header-contacts {
-	display: none;
-}
 
 .header-menu-btn {
 	width: 40px;
@@ -29,6 +23,9 @@
 	&:focus,
 	&:hover {
 		color: #2196f3;
+	}
+	@media screen and (min-width: 768px) {
+		display: none;
 	}
 }
 .header-menu-btn__icon {
@@ -74,16 +71,14 @@
 	fill: currentColor;
 }
 .mob-menu-list__item {
-	
 	&:not(:last-child) {
 		margin-bottom: 32px;
 	}
 }
 .mob-menu-list__link {
-font-style: normal;
+	font-style: normal;
 	@include text(40px, 1.17, 0.02em, 500);
 	color: $subtitle-color;
-
 }
 .mob-menu-active {
 	color: $accent-color;
@@ -127,4 +122,100 @@ font-style: normal;
 		margin-left: 10px;
 		margin-right: 10px;
 	}
+}
+.header__site-nav {
+	@media screen and (min-width: 768px) {
+		display: flex;
+		align-items: center;
+	}
+}
+
+.header-nav {
+	display: none;
+	@media screen and (min-width: 768px) {
+		display: flex;
+		align-items: center;
+	}
+}
+.header-nav__item {
+	@media screen and (min-width: 768px) {
+		@include text(14px, 1.14, 0.02em, 700);
+
+		&:not(:last-child) {
+			margin-right: 50px;
+		}
+	}
+}
+.header-nav__link {
+	@media screen and (min-width: 768px) {
+		position: relative;
+		color: $subtitle-color;
+		padding-top: 32px;
+		padding-bottom: 32px;
+	}
+}
+.nav-link {
+	@media screen and (min-width: 768px) {
+		&--active {
+			color: $accent-color;
+		}
+		&--current::after {
+			content: "";
+			width: 100%;
+			height: 4px;
+			border-radius: 2px;
+			background-color: $accent-color;
+			position: absolute;
+			bottom: -2px;
+			left: 0;
+		}
+	}
+}
+
+.header-contacts {
+	display: none;
+	@media screen and (min-width: 768px) {
+		display: block;
+		
+	}
+	@media screen and (min-width: 1200px) {
+		display: flex;
+		justify-content: space-between;
+	}
+}
+.header-contacts__item {
+	@include text(14px, 1.14, 0.02em, 500);
+	@media screen and (min-width: 768px) {
+		&:not(:last-child) {
+			margin-bottom: 10px;
+		}
+	}
+
+	@media screen and (min-width: 1200px) {
+		&:not(:last-child) {
+			margin-right: 50px;
+		}
+	}
+}
+.header-contacts__link {
+
+	color: $text-color;
+	transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+	&:hover,
+	&:focus {
+		color: $accent-color;
+	}
+	@media screen and (min-width: 1200px) {
+	padding-top: 32px;
+	padding-bottom: 32px;
+	
+	display: flex;
+	align-items: center;
+	
+}
+}
+.header-contacts__icons {
+	fill: currentColor;
+	margin-right: 10px;
 }
