--- a/css/main.css
+++ b/css/main.css
@@ -27,6 +27,7 @@ a {
 body {
   font-family: "Roboto", sans-serif;
   color: #212121;
+  font-style: normal;
 }
 
 .container {
@@ -36,9 +37,15 @@ body {
   margin: 0 auto;
 }
 
+@media screen and (min-width: 320px) and (max-width: 479px) {
+  .container {
+    width: 320px;
+  }
+}
+
 @media screen and (min-width: 480px) {
   .container {
-    min-width: 320px;
+    width: 480px;
   }
 }
 
@@ -383,19 +390,32 @@ body {
 }
 
 .hero {
-  padding-top: 200px;
-  padding-bottom: 200px;
+  padding-top: 118px;
+  padding-bottom: 118px;
   text-align: center;
   background: #2F303A;
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero.jpg");
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("/images/hero/mob-hero-1x.jpg");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  max-width: 1600px;
 }
 
 .hero--indent {
   margin: 0 auto;
+}
+
+@media screen and (min-width: 768px) {
+  .hero {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("/images/hero/tab-hero-1x.jpg");
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .hero {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero/hero.jpg");
+    padding-top: 200px;
+    padding-bottom: 200px;
+  }
 }
 
 .hero__container {
@@ -405,27 +425,33 @@ body {
 }
 
 .hero__title {
-  color: #ffffff;
-  font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
+  font-size: 26px;
+  line-height: 1.62;
   letter-spacing: 0.06em;
-  font-weight: 400;
+  font-weight: 900;
   text-align: center;
   text-transform: uppercase;
-  width: 696px;
-  margin-bottom: 30px;
+  color: #ffffff;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 30px;
+}
+
+@media screen and (min-width: 1200px) {
+  .hero__title {
+    font-size: 44px;
+    line-height: 1.36;
+    letter-spacing: 0.06em;
+    font-weight: 900;
+    width: 696px;
+  }
 }
 
 .hero__button {
-  font-family: inherit;
-  font-weight: 700;
   font-size: 16px;
   line-height: 1.87;
   letter-spacing: 0.06em;
-  font-weight: 400;
+  font-weight: 700;
   align-items: center;
   color: #ffffff;
   background-color: #2196F3;
@@ -444,16 +470,29 @@ body {
   background: #ffffff;
 }
 
-.features-list {
-  display: flex;
+@media screen and (min-width: 768px) {
+  .features-list {
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: -30px;
+    margin-bottom: -30px;
+  }
 }
 
 .features-list__item:not(:last-child) {
-  margin-right: 30px;
+  margin-bottom: 30px;
+}
+
+@media screen and (min-width: 768px) {
+  .features-list__item {
+    flex-basis: calc(100% / 2 - 30px);
+    margin-right: 30px;
+    margin-bottom: 30px;
+  }
 }
 
 .features-list__icon {
-  width: 270px;
+  width: 100%;
   height: 120px;
   background-color: #f5f4fa;
   border-radius: 4px;
