--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -1,15 +1,21 @@
 body {
 	font-family: "Roboto", sans-serif;
 	color: #212121;
+	font-style: normal;
 }
 .container {
 	width: 100%;
 	padding-left: 15px;
 	padding-right: 15px;
 	margin: 0 auto;
+	@media screen and (min-width: 320px) and (max-width: 479px) {
+		
+		width: 320px;
+	}
 
 	@media screen and (min-width: 480px) {
-		min-width: 320px;
+		
+		width: 480px;
 	}
 	@media screen and (min-width: 768px) {
 		width: 768px;
