--- a/sass/components/_feature.scss
+++ b/sass/components/_feature.scss
@@ -2,14 +2,26 @@
 	background: $predominantBg;
 }
 .features-list {
-	display: flex;
+	@media screen and (min-width: 768px) {
+		display: flex;
+		flex-wrap: wrap;
+		margin-right: -30px;
+		margin-bottom: -30px;
+	}
 }
 
-.features-list__item:not(:last-child) {
-	margin-right: 30px;
+.features-list__item {
+	&:not(:last-child) {
+		margin-bottom: 30px;
+	}
+	@media screen and (min-width: 768px) {
+		flex-basis: calc(100% / 2 - 30px);
+		margin-right: 30px;
+		margin-bottom: 30px;
+	}
 }
 .features-list__icon {
-	width: 270px;
+	width: 100%;
 	height: 120px;
 	background-color: rgba(245, 244, 250, 1);
 	border-radius: 4px;
