--- a/sass/components/_feature.scss
+++ b/sass/components/_feature.scss
@@ -2,23 +2,32 @@
 	background: $predominantBg;
 }
 .features-list {
+	@media screen and (max-width: 1199px) {
+		margin-bottom: -30px;
+	}
+	
 	@media screen and (min-width: 768px) {
 		display: flex;
 		flex-wrap: wrap;
 		margin-right: -30px;
-		margin-bottom: -30px;
 	}
+	
 }
 
 .features-list__item {
-	&:not(:last-child) {
-		margin-bottom: 30px;
+	@media screen and (max-width: 1199px) {
+		margin-bottom : 30px;
 	}
+
 	@media screen and (min-width: 768px) {
 		flex-basis: calc(100% / 2 - 30px);
 		margin-right: 30px;
-		margin-bottom: 30px;
 	}
+
+	@media screen and (min-width: 1200px) {
+		flex-basis: calc(100% / 4 - 30px);
+	}
+	
 }
 .features-list__icon {
 	width: 100%;
