--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -4,7 +4,11 @@
 	text-align: center;
 	background: $thirdBg;
 
-	background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("/images/hero/mob-hero-1x.jpg");	
+	background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero/mob-hero-1x.jpg");
+	@media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+		background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+			url("../images/hero/mob-hero-2x.jpg");
+	}
 	background-position: center;
 	background-size: cover;
 	background-repeat: no-repeat;
@@ -13,12 +17,18 @@
 	}
 
 	@media screen and (min-width: 768px) {
-		
-		background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("/images/hero/tab-hero-1x.jpg");
+		background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero/tab-hero-1x.jpg");
+		@media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+		background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+			url("../images/hero/tab-hero-2x.jpg");
+	}
 	}
 	@media screen and (min-width: 1200px) {
-
 		background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero/hero.jpg");
+		@media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+		background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+			url("../images/hero/hero-2x.jpg");
+	}
 		padding-top: 200px;
 		padding-bottom: 200px;
 	}
@@ -43,7 +53,7 @@
 		width: 696px;
 	}
 }
-.hero__button {		
+.hero__button {
 	@include text(16px, 1.87, 0.06em, 700);
 	align-items: center;
 	color: $btnText-color;
