--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -11,19 +11,16 @@
 }
 
 .team-list {
-	display: flex;
+	@media screen and (min-width: 768px) {
+		display: flex;
+		
+	}
 }
 .team-list__item {
-	flex-basis: calc((100% - 90px) / 4);
-	margin-right: 30px;
 	background: $heroTitle-color;
 	box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
 	border-radius: 0px 0px 4px 4px;
-
-	&:last-child {
-		margin-right: 0px;
 	}
-}
 .team-list__subtitle {
 	@include text(16px, 1.19, 0.03em, 500);
 	text-align: center;
