--- a/sass/components/_portfolio-menu.scss
+++ b/sass/components/_portfolio-menu.scss
@@ -6,34 +6,50 @@
 
 .portfolio-menu {
 	display: flex;
-	justify-content: center;
+	
+
+	@media screen and (max-width: 767px) {
+		flex-wrap: wrap;
+		
+	
+	}
+	@media screen and (min-width: 768px) {
+		justify-content: center;
+	}
 }
 
 .portfolio-menu__item {
 	transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), order-radius 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
 	&:not(:last-child) {
 		margin-right: 8px;
 	}
+	
 	&:focus,
 	&:hover {
 		box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 		border-radius: 4px;
 	}
+	@media screen and (max-width: 767px) {
+		&:nth-child(-n + 3) {
+			margin-bottom: 15px;
+		}
+		
+	}
 }
 .portfolio-menu__button {
-	@include text(16px, 1.62, 0.03em, 500);	
+	
+	@include text(16px, 1.62, 0.03em, 500);
 	text-align: center;
 	color: $subtitle-color;
-	background: $secondBg;	
+	background: $secondBg;
 	border: none;
 	border-radius: 4px;
 	cursor: pointer;
-	
+
 	transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-	
+
 	padding: 6px 22px;
-	
+
 	&:focus,
 	&:hover {
 		background-color: $accent-color;
