--- a/css/main.css
+++ b/css/main.css
@@ -67,6 +67,12 @@ body {
   }
 }
 
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
 .logo {
   font-family: "Raleway", sans-serif;
   font-size: 26px;
@@ -604,18 +610,36 @@ body {
 }
 
 .team__title {
-  font-size: 36px;
+  font-size: 28px;
   line-height: 1.17;
   letter-spacing: 0.03em;
   font-weight: 700;
   text-align: center;
   color: #212121;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
+}
+
+@media screen and (min-width: 1200px) {
+  .team__title {
+    font-size: 36px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    font-weight: 700;
+    margin-bottom: 50px;
+  }
+}
+
+@media screen and (max-width: 1119px) {
+  .team-list {
+    margin-bottom: -30px;
+  }
 }
 
 @media screen and (min-width: 768px) {
   .team-list {
     display: flex;
+    flex-wrap: wrap;
+    margin-right: -30px;
   }
 }
 
@@ -623,6 +647,25 @@ body {
   background: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
+}
+
+@media screen and (max-width: 1119px) {
+  .team-list__item {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .team-list__item {
+    flex-basis: calc(100% / 2 - 30px);
+    margin-right: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .team-list__item {
+    flex-basis: calc(100% / 4 - 30px);
+  }
 }
 
 .team-list__subtitle {
@@ -652,28 +695,60 @@ body {
 }
 
 .clients__title {
-  font-size: 36px;
+  font-size: 28px;
   line-height: 1.17;
   letter-spacing: 0.03em;
   font-weight: 700;
   text-align: center;
   color: #212121;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
+}
+
+@media screen and (min-width: 1200px) {
+  .clients__title {
+    font-size: 36px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    font-weight: 700;
+    margin-bottom: 50px;
+  }
 }
 
 .clients-list {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  flex-wrap: wrap;
+  margin-right: -30px;
+}
+
+@media screen and (max-width: 1119px) {
+  .clients-list {
+    margin-bottom: -30px;
+  }
 }
 
 .clients-list__item {
-  width: 170px;
   height: 92px;
+  width: 100%;
+  flex-basis: calc(100% / 2 - 30px);
+  margin-right: 30px;
 }
 
-.clients-list__item:not(:last-child) {
-  margin-right: 30px;
+@media screen and (max-width: 1119px) {
+  .clients-list__item {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 780px) {
+  .clients-list__item {
+    flex-basis: calc(100% / 3 - 30px);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .clients-list__item {
+    flex-basis: calc(100% / 6 - 30px);
+  }
 }
 
 .clients-list__link {
@@ -699,124 +774,12 @@ body {
 
 .footer {
   background: #2F303A;
-  padding-bottom: 60px;
-  padding-top: 60px;
 }
 
 .footer__container {
-  display: flex;
-}
-
-.footer-contacts__item:not(:last-child) {
-  margin-bottom: 9px;
-}
-
-.footer-contacts__link {
-  font-style: normal;
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-  font-weight: 400;
-  color: rgba(255, 255, 255, 0.6);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.footer-contacts__link:hover, .footer-contacts__link:focus {
-  color: #2196f3;
-}
-
-.address--white {
-  color: #ffffff;
-}
-
-.footer-join {
-  padding-top: 12px;
-  padding-bottom: 40px;
-  padding-left: 70px;
-}
-
-.footer-join__title {
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
-  font-weight: 700;
-  text-transform: uppercase;
-  color: #ffffff;
-  margin-bottom: 20px;
-}
-
-.footer-subscribe {
-  padding-left: 93px;
-  padding-top: 12px;
-  width: 570px;
-}
-
-.footer-subscribe__title {
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
-  font-weight: 700;
-  text-transform: uppercase;
-  color: #ffffff;
-  margin-bottom: 20px;
-}
-
-.subscribe-form {
-  display: flex;
-}
-
-.subscribe-form__mail {
-  width: 358px;
-  padding-top: 15px;
-  padding-bottom: 15px;
-  padding-left: 16px;
-  margin-right: 12px;
-  font-size: 16px;
-  line-height: 1.25;
-  letter-spacing: 0.03em;
-  font-weight: 400;
-  color: rgba(255, 255, 255, 0.6);
-  background: transparent;
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  border-radius: 4px;
-  box-sizing: border-box;
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-}
-
-.subscribe-form__mail::placeholder {
-  font-size: 16px;
-  line-height: 1.25;
-  letter-spacing: 0.03em;
-  font-weight: 400;
-  color: rgba(255, 255, 255, 0.6);
-}
-
-.subscribe-form__mail:focus {
-  outline: transparent;
-}
-
-.subscribe-btn {
-  padding: 10px 13px 10px 29px;
-  background: #2196F3;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-}
-
-.subscribe-btn__text {
-  font-size: 16px;
-  line-height: 1.87;
-  letter-spacing: 0.06em;
-  font-weight: 700;
+  padding-bottom: 60px;
+  padding-top: 60px;
   text-align: center;
-  color: #ffffff;
-}
-
-.subscribe-btn__icon {
-  margin-left: 10px;
-  fill: #ffffff;
 }
 
 .menu-section {
@@ -827,7 +790,18 @@ body {
 
 .portfolio-menu {
   display: flex;
-  justify-content: center;
+}
+
+@media screen and (max-width: 767px) {
+  .portfolio-menu {
+    flex-wrap: wrap;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .portfolio-menu {
+    justify-content: center;
+  }
 }
 
 .portfolio-menu__item {
@@ -841,6 +815,12 @@ body {
 .portfolio-menu__item:focus, .portfolio-menu__item:hover {
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
   border-radius: 4px;
+}
+
+@media screen and (max-width: 767px) {
+  .portfolio-menu__item:nth-child(-n + 3) {
+    margin-bottom: 15px;
+  }
 }
 
 .portfolio-menu__button {
@@ -869,28 +849,38 @@ body {
 }
 
 .projects-list {
-  display: flex;
-  flex-wrap: wrap;
+  margin-bottom: -30px;
+}
+
+@media screen and (min-width: 768px) {
+  .projects-list {
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: -30px;
+  }
 }
 
 .projects-list__item {
-  flex-basis: calc((100% - 60px) / 3);
   margin-bottom: 30px;
-  margin-right: 30px;
   outline: 1px solid #eeeeee;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.projects-list__item:nth-child(3n) {
-  margin-right: 0px;
-}
-
-.projects-list__item:nth-last-child(-n + 3) {
-  margin-bottom: 0px;
-}
-
 .projects-list__item:hover, .projects-list__item:focus {
   box-shadow: 1px 4px 6px 0px rgba(0, 0, 0, 0.16), 0px 4px 4px 0px rgba(0, 0, 0, 0.06);
+}
+
+@media screen and (min-width: 768px) {
+  .projects-list__item {
+    flex-basis: calc(100% / 2 - 30px);
+    margin-right: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .projects-list__item {
+    flex-basis: calc(100% / 3 - 30px);
+  }
 }
 
 .projects-list__link {
@@ -900,12 +890,6 @@ body {
 .projects-img {
   position: relative;
   overflow: hidden;
-}
-
-.projects-img__img {
-  display: block;
-  max-width: 100%;
-  height: auto;
 }
 
 .projects-img__hover {
@@ -932,7 +916,7 @@ body {
 
 .projects-content {
   padding: 20px 24px;
-  width: 370px;
+  width: 100%;
   background: #ffffff;
 }
 
