--- a/sass/components/_portfolio-projects.scss
+++ b/sass/components/_portfolio-projects.scss
@@ -3,25 +3,29 @@
 	padding-bottom: 94px;
 }
 .projects-list {
-	display: flex;
-	flex-wrap: wrap;
+	margin-bottom: -30px;
+	@media screen and (min-width: 768px) {
+		display: flex;
+		flex-wrap: wrap;
+		margin-right: -30px;
+	}
 }
 
 .projects-list__item {
-	flex-basis: calc((100% - 60px) / 3);
 	margin-bottom: 30px;
-	margin-right: 30px;
 	outline: 1px solid #eeeeee;
 	transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-	&:nth-child(3n) {
-		margin-right: 0px;
-	}
-	&:nth-last-child(-n + 3) {
-		margin-bottom: 0px;
-	}
+
 	&:hover,
 	&:focus {
 		box-shadow: 1px 4px 6px 0px rgba(0, 0, 0, 0.16), 0px 4px 4px 0px rgba(0, 0, 0, 0.06);
+	}
+	@media screen and (min-width: 768px) {
+		flex-basis: calc(100% / 2 - 30px);
+		margin-right: 30px;
+	}
+	@media screen and (min-width: 1200px) {
+		flex-basis: calc(100% / 3 - 30px);
 	}
 }
 
@@ -33,27 +37,23 @@
 	position: relative;
 	overflow: hidden;
 }
-	.projects-img__img {
-		display: block;
-		max-width: 100%;
-		height: auto;
-	}
-	.projects-img__hover {
-		position: absolute;
-		width: 100%;
-		height: 100%;
-		bottom: 0;
-		left: 0;
-		transform: translateY(100%);
-		transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-		overflow: auto;
-        
-		@include text(18px, 1.55, 0.03em, 400);		
-		color: $whiteText-color;
-		background-color: rgba(33, 150, 243, 0.9);
 
-		padding: 63px 24px;
-	}
+.projects-img__hover {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	bottom: 0;
+	left: 0;
+	transform: translateY(100%);
+	transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+	overflow: auto;
+
+	@include text(18px, 1.55, 0.03em, 400);
+	color: $whiteText-color;
+	background-color: rgba(33, 150, 243, 0.9);
+
+	padding: 63px 24px;
+}
 
 .projects-list__item:hover .projects-img__hover {
 	transform: translateY(0%);
@@ -61,18 +61,16 @@
 
 .projects-content {
 	padding: 20px 24px;
-	width: 370px;
+	width: 100%;
 	background: #ffffff;
 }
-	.projects-content__subtitle {
-		@include text(18px, 2, 0.06em, 700);		
-		color: $subtitle-color;
+.projects-content__subtitle {
+	@include text(18px, 2, 0.06em, 700);
+	color: $subtitle-color;
 
-		margin-bottom: 4px;
-	}
-	.projects-content__text {
-		@include text(16px, 1.87, 0.03em, 400);		
-		color: $text-color;
-	}
-
-
+	margin-bottom: 4px;
+}
+.projects-content__text {
+	@include text(16px, 1.87, 0.03em, 400);
+	color: $text-color;
+}
