--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -3,24 +3,44 @@
 }
 
 .team__title {
-	@include text(36px, 1.17, 0.03em, 700);
+	@include text(28px, 1.17, 0.03em, 700);
 	text-align: center;
 	color: $title-color;
+	margin-bottom: 30px;
 
-	margin-bottom: 50px;
+	@media screen and (min-width: 1200px) {
+		@include text(36px, 1.17, 0.03em, 700);
+
+		margin-bottom: 50px;
+	}
 }
 
 .team-list {
+	@media screen and (max-width: 1119px) {
+		margin-bottom: -30px;
+	}
+
 	@media screen and (min-width: 768px) {
 		display: flex;
-		
+		flex-wrap: wrap;
+		margin-right: -30px;
 	}
 }
 .team-list__item {
 	background: $heroTitle-color;
 	box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
 	border-radius: 0px 0px 4px 4px;
+	@media screen and (max-width: 1119px) {
+		margin-bottom: 30px;
 	}
+	@media screen and (min-width: 768px) {
+		flex-basis: calc(100% / 2 - 30px);
+		margin-right: 30px;
+	}
+	@media screen and (min-width: 1200px) {
+		flex-basis: calc(100% / 4 - 30px);
+	}
+}
 .team-list__subtitle {
 	@include text(16px, 1.19, 0.03em, 500);
 	text-align: center;
