--- a/sass/main.scss
+++ b/sass/main.scss
@@ -17,3 +17,4 @@
 @import './components/portfolio-projects';
 @import './components/modal';
 @import './components/social-list';
+@import './components/mob-menu';
