--- a/css/main.css
+++ b/css/main.css
@@ -141,140 +141,6 @@ img {
   align-items: center;
 }
 
-.header-menu-btn {
-  width: 40px;
-  height: 40px;
-  padding: 12px 8px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border: none;
-  background: transparent;
-  color: #000000;
-  cursor: pointer;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.header-menu-btn:focus, .header-menu-btn:hover {
-  color: #2196f3;
-}
-
-@media screen and (min-width: 768px) {
-  .header-menu-btn {
-    display: none;
-  }
-}
-
-.header-menu-btn__icon {
-  fill: currentColor;
-}
-
-.mob-menu {
-  position: fixed;
-  width: 100vw;
-  height: 100vh;
-  top: 0;
-  z-index: 5;
-  background: #ffffff;
-  padding: 48px 40px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  transition: visibility 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.close-menu-btn {
-  position: absolute;
-  top: 10px;
-  right: 15px;
-  width: 40px;
-  height: 40px;
-  padding: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border: none;
-  background: transparent;
-  color: #000000;
-  cursor: pointer;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.close-menu-btn:focus, .close-menu-btn:hover {
-  color: #2196f3;
-}
-
-.close-menu-btn__icon {
-  fill: currentColor;
-}
-
-.mob-menu-list__item:not(:last-child) {
-  margin-bottom: 32px;
-}
-
-.mob-menu-list__link {
-  font-style: normal;
-  font-size: 40px;
-  line-height: 1.17;
-  letter-spacing: 0.02em;
-  font-weight: 500;
-  color: #212121;
-}
-
-.mob-menu-active {
-  color: #2196F3;
-}
-
-.mob-menu-tel {
-  display: block;
-  font-style: normal;
-  font-size: 34px;
-  line-height: 1.17;
-  letter-spacing: 0.02em;
-  font-weight: 500;
-  color: #2196F3;
-}
-
-.mob-menu-tel--indent {
-  margin-bottom: 32px;
-}
-
-.mob-menu-mail {
-  display: block;
-  font-style: normal;
-  font-size: 24px;
-  line-height: 1.17;
-  letter-spacing: 0.02em;
-  font-weight: 500;
-  color: #757575;
-}
-
-.mob-menu-mail--indent {
-  margin-bottom: 64px;
-}
-
-.mob-social-list {
-  display: flex;
-}
-
-.mob-social-list__link {
-  font-style: normal;
-  font-size: 18px;
-  line-height: 1.22;
-  letter-spacing: 0.02em;
-  font-weight: 500;
-  color: #2196F3;
-}
-
-.social-dash::after {
-  content: "";
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  transform: rotate(90deg);
-  background-color: rgba(33, 33, 33, 0.2);
-  margin-left: 10px;
-  margin-right: 10px;
-}
-
 @media screen and (min-width: 768px) {
   .header__site-nav {
     display: flex;
@@ -779,7 +645,181 @@ img {
 .footer__container {
   padding-bottom: 60px;
   padding-top: 60px;
+}
+
+@media screen and (max-width: 1199px) {
+  .footer__container {
+    text-align: center;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer__container {
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .footer-tab-flex {
+    display: flex;
+    align-items: baseline;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .footer-tab-flex {
+    justify-content: space-evenly;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-tab-flex {
+    justify-content: space-around;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-address-container {
+    padding-right: 70px;
+  }
+}
+
+.footer-contacts {
+  padding-bottom: 60px;
+}
+
+.footer-contacts__item:not(:last-child) {
+  margin-bottom: 9px;
+}
+
+.footer-contacts__link {
+  font-style: normal;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  font-weight: 400;
+  color: rgba(255, 255, 255, 0.6);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-contacts__link:hover, .footer-contacts__link:focus {
+  color: #2196f3;
+}
+
+.footer-contacts__link--white {
+  color: #ffffff;
+}
+
+.footer-join {
+  padding-bottom: 60px;
+}
+
+.footer-join__title {
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: #ffffff;
+  margin-bottom: 20px;
+}
+
+.footer-subscribe__title {
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: #ffffff;
+  margin-bottom: 20px;
+}
+
+.subscribe-form {
+  display: flex;
+}
+
+@media screen and (max-width: 1199px) {
+  .subscribe-form {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+.subscribe-form__mail {
+  width: 100%;
+  height: 50px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  padding-left: 16px;
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: 0.03em;
+  font-weight: 400;
+  color: rgba(255, 255, 255, 0.6);
+  background: transparent;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+  box-sizing: border-box;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+}
+
+.subscribe-form__mail::placeholder {
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: 0.03em;
+  font-weight: 400;
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.subscribe-form__mail:focus {
+  outline: transparent;
+}
+
+@media screen and (max-width: 1199px) {
+  .subscribe-form__mail {
+    margin-bottom: 20px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .subscribe-form__mail {
+    width: 450px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .subscribe-form__mail {
+    width: 358px;
+    margin-right: 12px;
+  }
+}
+
+.subscribe-btn {
+  width: 200px;
+  height: 50px;
+  padding: 10px 13px 10px 29px;
+  background: #2196F3;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+}
+
+.subscribe-btn__text {
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+  font-weight: 700;
   text-align: center;
+  color: #ffffff;
+}
+
+.subscribe-btn__icon {
+  margin-left: 10px;
+  fill: #ffffff;
 }
 
 .menu-section {
@@ -1211,5 +1251,139 @@ img {
 
 .social-footer__icon {
   fill: currentColor;
+}
+
+.header-menu-btn {
+  width: 40px;
+  height: 40px;
+  padding: 12px 8px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: none;
+  background: transparent;
+  color: #000000;
+  cursor: pointer;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.header-menu-btn:focus, .header-menu-btn:hover {
+  color: #2196f3;
+}
+
+@media screen and (min-width: 768px) {
+  .header-menu-btn {
+    display: none;
+  }
+}
+
+.header-menu-btn__icon {
+  fill: currentColor;
+}
+
+.mob-menu {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  z-index: 5;
+  background: #ffffff;
+  padding: 48px 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  transition: visibility 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.close-menu-btn {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  width: 40px;
+  height: 40px;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: none;
+  background: transparent;
+  color: #000000;
+  cursor: pointer;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.close-menu-btn:focus, .close-menu-btn:hover {
+  color: #2196f3;
+}
+
+.close-menu-btn__icon {
+  fill: currentColor;
+}
+
+.mob-menu-list__item:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.mob-menu-list__link {
+  font-style: normal;
+  font-size: 40px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  font-weight: 500;
+  color: #212121;
+}
+
+.mob-menu-active {
+  color: #2196F3;
+}
+
+.mob-menu-tel {
+  display: block;
+  font-style: normal;
+  font-size: 34px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  font-weight: 500;
+  color: #2196F3;
+}
+
+.mob-menu-tel--indent {
+  margin-bottom: 32px;
+}
+
+.mob-menu-mail {
+  display: block;
+  font-style: normal;
+  font-size: 24px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  font-weight: 500;
+  color: #757575;
+}
+
+.mob-menu-mail--indent {
+  margin-bottom: 64px;
+}
+
+.mob-social-list {
+  display: flex;
+}
+
+.mob-social-list__link {
+  font-style: normal;
+  font-size: 18px;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+  font-weight: 500;
+  color: #2196F3;
+}
+
+.social-dash::after {
+  content: "";
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  transform: rotate(90deg);
+  background-color: rgba(33, 33, 33, 0.2);
+  margin-left: 10px;
+  margin-right: 10px;
 }
 /*# sourceMappingURL=main.css.map */
