--- a/sass/components/_social-list.scss
+++ b/sass/components/_social-list.scss
@@ -4,9 +4,9 @@
 
 	&--indent {
 
-		margin-bottom: 24px;
+		padding-bottom:  24px;
 		@media screen and (min-width: 1200px) {
-			margin-bottom: 30px;
+			padding-bottom: 30px;
 		}
 	}
 }
